--- a/Visa Check/Visa Check/Storyboards/en.lproj/Main.strings
+++ b/Visa Check/Visa Check/Storyboards/en.lproj/Main.strings
@@ -63,7 +63,7 @@
 "dew-ki-N3F.text" = "Norway";
 
 /* Class = "UILabel"; text = "Insert your passport country"; ObjectID = "gpC-Xk-KwC"; */
-"gpC-Xk-KwC.text" = "Insert your passport country";
+"gpC-Xk-KwC.text" = "Insert passport country";
 
 /* Class = "UILabel"; text = "Min Flight Price:"; ObjectID = "jU9-vM-VW1"; */
 "jU9-vM-VW1.text" = "Min Flight Price:";
